// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorBoundary /> should render children 1`] = `<div />`;

exports[`<ErrorBoundary /> should render generic when caught 1`] = `
.emotion-0 {
  height: 100%;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  background-color: #252525;
  font-size: 15px;
  line-height: 19px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}

.emotion-2 {
  max-width: 80%;
}

<div
  className="ErrorBoundary emotion-0"
>
  <div
    className="emotion-1"
  >
    <svg
      className="emotion-2"
      data-file-name="error.svg"
      width={604}
    />
    <br />
     Hmmm, something went wrong.
    <br />
     Please try refreshing.
  </div>
</div>
`;

exports[`<ErrorBoundary /> should render properly when transparent 1`] = `
.emotion-0 {
  height: 100%;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  background-color: transparent;
  font-size: 15px;
  line-height: 19px;
  box-shadow: none;
}

.emotion-2 {
  max-width: 80%;
}

<div
  className="ErrorBoundary emotion-0"
>
  <div
    className="emotion-1"
  >
    <svg
      className="emotion-2"
      data-file-name="error.svg"
      width={604}
    />
    <br />
     Hmmm, something went wrong.
    <br />
     Please try refreshing.
  </div>
</div>
`;
